updating all information asked

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a student at the UNC Boot Camp</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Kinston, NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love hiking, reading and designing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>One day have a successful company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Morrisville, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like the challenge that comes with it</p>
     </section>
 
     <footer id="footer">
